--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -3,15 +3,14 @@
     <div class="top">
       <div class="head">
         <img class="logo" src="./assets/logo-color.svg">
-        <span class="title">ng-alain</span>
+        <span class="title">王建野</span>
       </div>
-      <div class="desc">武林中最有影响力的《葵花宝典》；欲练神功，挥刀自宫</div>
     </div>
     <router-outlet></router-outlet>
-    <global-footer [links]="links">
+    <global-footer>
       Copyright
       <i class="anticon anticon-copyright"></i> 2017
-      <a href="//github.com/cipchk" target="_blank">卡色</a>出品
+      <a href="https://github.com/wangjianye" target="_blank">王建野</a>出品
     </global-footer>
   </div>
 </div>
