--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -12,7 +12,7 @@
       </div>
     </li>
   </ul>
-  <h4  class="text-white p-1">出入库管理系统</h4>
+  <h4  class="text-white p-1">adminxx</h4>
   <ul class="alain-default__nav">
     <li class="hidden-mobile">
       <nz-dropdown nzTrigger="click" nzPlacement="bottomRight">
