--- a/src/app/routes/sys/user/user.component.html
+++ b/src/app/routes/sys/user/user.component.html
@@ -1,5 +1,5 @@
 <div class="p-1">
-  <button nz-button [nzType]="'primary'" (click)="openSaveWin()">
+  <button nz-button [nzType]="'primary'" (click)="openSaveWin(null)">
     <i class="anticon anticon-plus"></i>添加
   </button>
   <button nz-button [nzType]="'primary'" (click)="mainTable.getData()">
